test/files/neg/trait-no-native.check
trait-no-native.scala:3: error: A trait cannot define a native method.
  @native def foo = ???
              ^
1 error
